--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
   <include src="./partials/header.html"></include>
   <include src="./partials/body.html"></include>
   <include src="./partials/modal.html"></include>
+  <include src="./partials/pagination.html"></include>
   <include src="./partials/footer.html"></include>
 </body>
 
