--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
   <!-- ❗️❗️❗️ Add partials like so for every page -->
   <include src="./partials/header.html"></include>
   <include src="./partials/body.html"></include>
+  <include src="./partials/main-galery.html"></include>
   <include src="./partials/modal.html"></include>
   <include src="./partials/pagination.html"></include>
   <include src="./partials/footer.html"></include>
