--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,7 @@
   <include src="./partials/header.html"></include>
   <include src="./partials/body.html"></include>
   <include src="./partials/main-galery.html"></include>
+  <include src="./partials/team-modal.html"></include>
   <include src="./partials/contacts.html"></include>
   <include src="./partials/modal.html"></include>
   <include src="./partials/pagination.html"></include>
