--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,7 @@
   <include src="./partials/contacts.html"></include>
   <include src="./partials/modal.html"></include>
   <include src="./partials/pagination.html"></include>
+  <include src="./partials/scroll.html"></include>
   <include src="./partials/footer.html"></include>
 </body>
 
