--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Page title</title>
+  <title>Filmoteka</title>
   <link rel="icon" type="image/png" sizes="32x32" href="./images/fav-icon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="./images/fav-icon/favicon-16x16.png">
   <meta name="msapplication-TileColor" content="#da532c">
